--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,24 +18,30 @@ div{
 .clouds{
     width:30%;
     position:absolute;
-    top:5%;
+    top:8%;
     right: -50%;
     animation: slide 20s infinite;
     animation-delay: 2s;
 }
+.sun{
+    position:absolute;
+    right:0;
+    top:0;
+    width:200px;
+}
 .pipe{
     position:absolute;
-    width:8%;
-    height: 18%;
+    width: 5rem;
+    height: 5rem;
     bottom:10px;
-    right:-50%;
+    right:-5rem;
     animation: slide 3s infinite;
     animation-timing-function: linear;
 }
 .mario{
     position:absolute;
     bottom:0;
-    height: 22%;   
+    height: 7rem;   
 }
 .grass{
     width:100vw;
